# is-postgresql-protocol-fun

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  docker-compose.yml  vcpkg.json
include/ippf/: connection_data.h  session.h
include/ippf/core/: buffer.h  buffer_op.h  concepts.h  crypto.h  to_x_endian.h  types_op.h
include/ippf/io/: istream.h  ostream.h  session_context.h
include/ippf/protocol/: message_parser.h  message_reader.h
include/ippf/protocol/actions/: connect.h  do_simple_query.h
include/ippf/protocol/messages/backend/: AuthenticationOk.h  AuthenticationSASL.h  AuthenticationSASLContinue.h  AuthenticationSASLFinal.h  BackendKeyData.h  CommandComplete.h  DataRow.h  ErrorResponse.h  NoticeResponse.h  ParameterStatus.h  ReadyForQuery.h  RowDescription.h  message_types.h
include/ippf/protocol/messages/frontend/: Query.h  SASLInitialResponse.h  SASLResponse.h  StartUpMessage.h
source/: chat_client.cpp  chat_message.hpp  chat_server.cpp  main.cpp
tests/messages/: all.h  test_SASLInitialResponse.h  test_StartUpMessage.h
